--- a/prehtml/tte.htm
+++ b/prehtml/tte.htm
@@ -966,21 +966,21 @@ charblock now has two sets of glyphs
   <td>
 	<div class="cpt" style="width:240px;">
 	  <img src="../img/tte/test_tte_se4.png" id="img-test-se4"
-		alt="test_tte_se4"><br>
+		alt="Output for test_tte_se4"><br>
 	  <b>Fig <em>[[ref:img-test-se4]]</em>a</b>: <code>test_tte_se4</code> output.
 	</div>
   </td>
   <td>
 	<div class="cpt" style="width:128px;">
 	  <img src="../img/tte/tte_se4_pal.png"
-		alt="Palette for <code>test_tte_se4</code>."><br>
+		alt="Palette for test_tte_se4."><br>
 	  <b>Fig <em>[[ref:img-test-se4]]</em>b</b>: Palette.
 	</div>
   </td>
   <td>
 	<div class="cpt" style="width:256px;">
 	  <img src="../img/tte/tte_se4_tiles.png"
-		alt="VRAM Tiles for <code>test_tte_se4</code>."><br>
+		alt="VRAM Tiles for test_tte_se4."><br>
 	  <b>Fig <em>[[ref:img-test-se4]]</em>c</b>: Tileset.
 	</div>
   </td>
@@ -1124,7 +1124,7 @@ class="num">0x100</span>, <span class="num">0</span> };
 
 <div class="cpt" style="width:240px;">
   <img src="../img/tte/test_tte_ase.png" id="img-test-ase"
-    alt="<code>test_tte_ase</code>."><br>
+    alt="test_tte_ase."><br>
   <b>Fig <em>[[ref:img-test-ase]]</em></b>: <code>test_tte_ase</code>.
 </div>
 
@@ -1618,10 +1618,10 @@ the effects can be quite stunning.
 <div class="cpt" style="width:576px;">
   <img src="../img/tte/subpx.png" id="img-subpx"
     alt="Subpixel rendering. Left: "><br>
-  <b>Fig&nbsp;<em>[[ref:img-subpx]]</em></b>: Subpixel rendering.
-  <b>a</b>: &lsquo;A&rsquo; on 8&times;8 grid.
-  <b>b</b>: as left, in R,G,B sub-grid.
-  <b>c</b>: shifting rows to distribute sub-pixels evenly.
+  <b>Fig&nbsp;<em>[[ref:img-subpx]]</em></b>: Subpixel rendering.<br>
+  <b>a</b>: &lsquo;A&rsquo; on 8&times;8 grid.<br>
+  <b>b</b>: as left, in R,G,B sub-grid.<br>
+  <b>c</b>: shifting rows to distribute sub-pixels evenly.<br>
   <b>d</b>: new color distribution in pixels (black/white inverted).
 </div>
 </div>
